# all-hackage-ghc-pkg

./: CHANGELOG.md  README.md  build.nix  cabal.project  create-cabal-project.cabal  find-non-broken.sh  good-2.txt  patched-ghc.nix  run.sh  shell.nix
.github/workflows/: build-package.yaml  ci.yml  hackage-build.yaml  run-build-package.yaml
create-cabal-project/app/: Main.hs
create-cabal-project/data/: good-custom-new.txt  good-custom.txt
find-non-broken/: CHANGELOG.md  LICENSE  drv-list.txt  find-non-broken.cabal  non-broken-drvs.txt
find-non-broken/app/: Main.hs
find-non-broken/src/: MyLib.hs  Types.hs
find-non-broken/src/Backends/: BuildLocally.hs  GHActions.hs
nix/: find-non-broken.sh  non-broken-haskell-packages.nix  pkgs.nix
src/: MyLib.hs
test/: test.sh
